--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,14 +14,14 @@
 
 // src/css/quasar.variables.sass
 
-$primary   : #009a8a;
-$secondary : #3d1e04;
-$accent    : #9C27B0;
+$primary: #009a8a;
+$secondary: #3d1e04;
+$accent: #9c27b0;
 
-$dark      : #1d1d1d;
-$dark-page : #121212;
+$dark: #1d1d1d;
+$dark-page: #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
